# CrewAI-Agents-PDF-RAG

./: README.md
rag_pdf/: RAG_Summary.md  Terminal_Output.txt  pyproject.toml
rag_pdf/src/rag_pdf/: crew.py  main.py
rag_pdf/src/rag_pdf/config/: agents.yaml  tasks.yaml
