[project]
name = "rag_pdf"
version = "0.1.0"
description = "rag-pdf using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
rag_pdf = "rag_pdf.main:run"
run_crew = "rag_pdf.main:run"
train = "rag_pdf.main:train"
replay = "rag_pdf.main:replay"
test = "rag_pdf.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
